--- a/templates/couch/home.html
+++ b/templates/couch/home.html
@@ -1,15 +1,29 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block head_title %}Couch{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
+            <h1 class="lead text-align-center">Couch Form</h1>
             <form action="" method="post">
                 {% csrf_token %}
+                {{ form|crispy }}
                 <button class="btn btn-primary btn-block">Send</button>
             </form>
-            <pre>
-
-            </pre>
+            <br>
+            <p class="lead">Retriving a data from couchdb:</p>
+            <br>
+            <table class="table table-hover table-responsive">
+                <thead>
+                <th>Link</th>
+                <th>Title</th>
+                </thead>
+                <tbody>
+                {% for key in query %}
+                <th>{{ key.value }}</th>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 {% endblock %}
