--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load staticfiles %}
+{% load socialaccount %}
 {% load crispy_forms_tags %}
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 {% block style %}
@@ -26,9 +27,9 @@
             <br>
         <p class="lead text-align-center">or</p>
             <hr>
-            <p class="text-align-center"><a href="/accounts/facebook/login/?process=login" class="btn btn-social-icon btn-facebook"><span
+            <p class="text-align-center"><a href="{% provider_login_url 'facebook' method='oauth2' %}" class="btn btn-social-icon btn-facebook"><span
                     class="fa fa-facebook"></span></a> <a
-                    href="/accounts/google/login/?process=login" class="btn btn-social-icon btn-google"><span class="fa fa-google"></span></a></p>
+                    href="{% provider_login_url 'google' method='oauth2' %}"><span class="fa fa-google"></span></a></p>
         </div>
     </div>
 {% endblock %}
