The big refractoring of my code

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,6 +8,7 @@
             <ul class="nav navbar-nav">
                 {% if request.user.is_superuser %}
                     <li><a href="{% url 'admin:index' %}">Admin</a></li>
+                    <li><a href="http://127.0.0.1:5984/_utils">CouchDB</a></li>
                 {% endif %}
             </ul>
             {% if request.user.is_authenticated %}
@@ -16,7 +17,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>{{ request.user }}</b> <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{% url 'account_logout' %}">Log out</a></li>
+                            <li><a href="{% url 'aggregator:add' %}"><span class="fa fa-plus-circle"></span> Add a source span</a></li>
+                            <li><a href="{% url 'aggregator:edit' %}"><span class="fa fa-edit"></span> Edit sources</a></li>
+                            <li><a href="{% url 'aggregator:home' %}"><span class="fa fa-list-ol"></span> Show sources</a></li>
+                            <li><a href="{% url 'account_logout' %}"><span class="fa fa-sign-out"></span> Log out</a></li>
                         </ul>
                     </li>
                 </ul>
