Added new features into views, navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>{{ request.user }}</b> <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{% url 'aggregator:add' %}"><span class="fa fa-plus-circle"></span> Add a source span</a></li>
+                            <li><a href="{% url 'aggregator:add' %}"><span class="fa fa-plus-circle"></span> Add a source</a></li>
                             <li><a href="{% url 'aggregator:edit' %}"><span class="fa fa-edit"></span> Edit sources</a></li>
                             <li><a href="{% url 'aggregator:home' %}"><span class="fa fa-list-ol"></span> Show sources</a></li>
                             <li><a href="{% url 'account_logout' %}"><span class="fa fa-sign-out"></span> Log out</a></li>
