--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,8 @@
     <div class="jumbotron">
     <div class="container">
         <div class="col-md-6">
-            <h1>RSS parser</h1>
-            <p>Something here and there. We will show content here.</p>
+            <h1>RSS' aggregator</h1>
+            <p>Read, add, edit your RSS' sources.</p>
         </div>
         <div class="col-md-6">
             <h1>Try to interact with something.</h1>
