Added changes into navbar and edit aggregator's template

--- a/templates/aggregator/edit.html
+++ b/templates/aggregator/edit.html
@@ -1,1 +1,9 @@
-{{ form.as_p }}
+{% extends 'base.html' %}
+{% block head_title %}Edit sources{% endblock %}
+{% block content %}
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+
+        </div>
+    </div>
+{% endblock %}
