--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,12 +18,9 @@
                     {% else %}
                     {% endif %}
                 {% endif %}
-                <li><a href="{% url 'rss' %}">RSS</a></li>
-            </ul>
-            {% if request.user.is_authenticated %}
-                <ul class="nav navbar-nav navbar-right">
+                {% if request.user.is_authenticated %}
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>{{ request.user }}</b> <span
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Aggregator <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="{% url 'aggregator:add' %}"><span class="fa fa-plus-circle"></span> Add a
@@ -32,6 +29,17 @@
                             </li>
                             <li><a href="{% url 'aggregator:home' %}"><span class="fa fa-list-ol"></span> Show
                                 sources</a></li>
+                        </ul>
+                    </li>
+                {% endif %}
+                <li><a href="{% url 'rss' %}">RSS</a></li>
+            </ul>
+            {% if request.user.is_authenticated %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>{{ request.user }}</b> <span
+                                class="caret"></span></a>
+                        <ul class="dropdown-menu">
                             <li><a href="{% url 'account_logout' %}"><span class="fa fa-sign-out"></span> Log out</a>
                             </li>
                         </ul>
