--- a/templates/aggregator/home.html
+++ b/templates/aggregator/home.html
@@ -5,9 +5,10 @@
         <div class="col-md-8 col-md-offset-2">
             <table class="table table-responsive table-hover">
                 <thead>
-                <th class="lead">#</th>
-                <th class="lead">Title</th>
-                <th class="lead">Link</th>
+                <th class="lead text-align-center">#</th>
+                <th class="lead text-align-center">Title</th>
+                <th class="lead text-align-center">Link</th>
+                <th class="lead text-align-center">Action</th>
                 </thead>
                 {% for foo in response %}
                     <tbody>
@@ -15,6 +16,7 @@
                     {% for item in foo.value %}
                         <th>{{ item }}</th>
                     {% endfor %}
+                    <th class="text-align-center"><span class="fa fa-remove" style="color: red;"></span></th>
                     </tbody>
                 {% endfor %}
             </table>
