Changed urls, templates, views for aggregator app, configured permission to delete certain sources for certain user

--- a/templates/aggregator/home.html
+++ b/templates/aggregator/home.html
@@ -11,9 +11,10 @@
             {% if response %}
                 <table class="table table-responsive table-hover">
                     <thead>
-                    <th class="lead text-align-center">#</th>
-                    <th class="lead text-align-center">Title</th>
-                    <th class="lead text-align-center">Link</th>
+                    <th class="lead">#</th>
+                    <th class="lead">Title</th>
+                    <th class="lead">Link</th>
+                    <th class="lead">User</th>
                     </thead>
                     {% for foo in response %}
                         <tbody>
