--- a/templates/aggregator/home.html
+++ b/templates/aggregator/home.html
@@ -5,7 +5,10 @@
         <div class="col-md-8 col-md-offset-2">
             {% if messages %}
                 {% for message in messages %}
-                    <div class="alert alert-success">{{ message }}</div>
+                    <div class="alert alert-success alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    {{ message }}
+                    </div>
                 {% endfor %}
             {% endif %}
             {% if response %}
@@ -15,6 +18,7 @@
                     <th class="lead">Title</th>
                     <th class="lead">Link</th>
                     <th class="lead">User</th>
+                    <th class="lead">Has read?</th>
                     </thead>
                     {% for foo in response %}
                         <tbody>
