--- a/templates/aggregator/home.html
+++ b/templates/aggregator/home.html
@@ -13,22 +13,9 @@
                 {% endfor %}
             {% endif %}
             {% if response %}
-                <table class="table table-responsive table-hover">
-                    <thead>
-                    <th class="lead">#</th>
-                    <th class="lead">Title</th>
-                    <th class="lead">Link</th>
-                    <th class="lead">User</th>
-                    </thead>
-                    {% for foo in response %}
-                        <tbody>
-                        <th>{{ forloop.counter }}</th>
-                        <th>{{ foo.value.0 }}</th>
-                        <th>{{ foo.value.1 }}</th>
-                        <th>{{ foo.value.2 }}</th>
-                        <th>{{ foo.value.4 }}</th>
-                        </tbody>
-                    {% endfor %}
+                {% for foo in response %}
+                    <h1 class="lead"><a href="{% url 'aggregator:parse' foo.id %}">{{ foo.value.0 }}</a></h1>
+                {% endfor %}
                 </table>
             {% elif request.user.is_authenticated %}
                 <p class="lead">There is no documents. You can <a href="{% url 'aggregator:add' %}">add</a> a new
