Fixed a bug into aggregator's template

--- a/templates/aggregator/edit.html
+++ b/templates/aggregator/edit.html
@@ -23,8 +23,7 @@
                         <th class="lead">Link</th>
                         <th class="lead text-align-center">Has read?</th>
                         <th class="lead text-align-center">
-                            <a href="#" title="What is it?" data-toggle="popover"
-                               data-triger="focus" data-placement="left" data-trigger="focus"
+                            <a href="#" title="What is it?" data-toggle="popover" data-placement="left"
                                data-content="Select elements what you want and press a button for deletion or read.">Actions</a>
                         </th>
                         </thead>
