--- a/templates/aggregator/parse.html
+++ b/templates/aggregator/parse.html
@@ -1,4 +1,15 @@
 {% extends 'base.html' %}
 {% block head_title %}Parse's page{% endblock %}
 {% block content %}
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h1 class="lead text-align-center">{{ items.0 }}</h1>
+            <hr>
+            {% for foo in source.entries %}
+                <h2 class="lead"><a href="{{ foo.link }}">{{ foo.title }}</a></h2>
+                <p class="lead">{{ foo.description }}</p>
+            {% endfor %}
+
+        </div>
+    </div>
 {% endblock %}
