--- a/templates/aggregator/parse.html
+++ b/templates/aggregator/parse.html
@@ -6,10 +6,9 @@
             <h1 class="lead text-align-center">{{ items.0 }}</h1>
             <hr>
             {% for foo in source.entries %}
-                <h2 class="lead"><a href="{{ foo.link }}">{{ foo.title }}</a></h2>
+                <h2 class="lead text-align-center"><a href="{{ foo.link }}">{{ foo.title }}</a></h2>
                 <p class="lead">{{ foo.description }}</p>
             {% endfor %}
-
         </div>
     </div>
 {% endblock %}
