--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -27,6 +27,7 @@
                                 source</a></li>
                             <li><a href="{% url 'aggregator:edit' %}"><span class="fa fa-edit"></span> Edit sources</a>
                             </li>
+                            <li><a href="{% url 'aggregator:filters' %}"><span class="fa fa-filter"></span> Filters</a></li>
                             <li><a href="{% url 'aggregator:home' %}"><span class="fa fa-list-ol"></span> Show
                                 sources</a></li>
                         </ul>
@@ -40,7 +41,6 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>{{ request.user }}</b> <span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#"><span class="fa fa-gear"></span> Settings</a></li>
                             <li><a href="{% url 'account_logout' %}"><span class="fa fa-sign-out"></span> Log out</a>
                             </li>
                         </ul>
