--- a/templates/aggregator/edit.html
+++ b/templates/aggregator/edit.html
@@ -16,35 +16,40 @@
             {% if response %}
                 <form action="" method="post">
                     {% csrf_token %}
-                    <table class="table table-responsive table-hover">
-                        <thead>
-                        <th class="lead">#</th>
-                        <th class="lead">Title</th>
-                        <th class="lead">Link</th>
-                        <th class="lead text-align-center">Has read?</th>
-                        <th class="lead text-align-center">
-                            <a href="#" title="What is it?" data-toggle="popover" data-placement="left"
-                               data-content="Select elements what you want and press a button for deletion or read.">Actions</a>
-                        </th>
-                        </thead>
-                        {% for foo in response %}
-                            <tbody>
-                            <th>{{ forloop.counter }}</th>
-                            <th><a href="{% url 'aggregator:update' foo.id %}">{{ foo.value.0 }}</a></th>
-                            <th>{{ foo.value.1 }}</th>
-                            <th class="text-align-center">
-                                {% if foo.value.3 %}
-                                    <span class="fa fa-check-square" style="color: green;"></span>
-                                {% else %}
-                                    <span class="fa fa-minus-square" style="color: red;"></span>
-                                {% endif %}
+                    <div class="panel panel-primary">
+                        <div class="panel-heading text-align-center">
+                            Edit your rss sources here
+                        </div>
+                        <table class="table table-responsive table-bordered table-hover">
+                            <thead>
+                            <th class="lead">#</th>
+                            <th class="lead">Title</th>
+                            <th class="lead">Link</th>
+                            <th class="lead text-align-center">Has read?</th>
+                            <th class="lead text-align-center">
+                                <a href="#" title="What is it?" data-toggle="popover" data-placement="left"
+                                   data-content="Select elements what you want and press a button for deletion or read.">Actions</a>
                             </th>
-                            <th class="text-align-center">
-                                <input type="checkbox" name="item" value="{{ foo.id }}">
-                            </th>
-                            </tbody>
-                        {% endfor %}
-                    </table>
+                            </thead>
+                            {% for foo in response %}
+                                <tbody>
+                                <th>{{ forloop.counter }}</th>
+                                <th><a href="{% url 'aggregator:update' foo.id %}">{{ foo.value.0 }}</a></th>
+                                <th>{{ foo.value.1 }}</th>
+                                <th class="text-align-center">
+                                    {% if foo.value.3 %}
+                                        <span class="fa fa-check-square" style="color: green;"></span>
+                                    {% else %}
+                                        <span class="fa fa-minus-square" style="color: red;"></span>
+                                    {% endif %}
+                                </th>
+                                <th class="text-align-center">
+                                    <input type="checkbox" name="item" value="{{ foo.id }}">
+                                </th>
+                                </tbody>
+                            {% endfor %}
+                        </table>
+                    </div>
                     <hr>
                     <div class="col-md-6">
                         <button class="btn btn-primary btn-block" name="as_read"><span
