--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,10 @@
 {% include 'navbar.html' %}
 {% block carousel %}
 {% endblock %}
+
+{% block jumbotron %}
+{% endblock %}
+
 <div class="container">
     {% block content %}
     {% endblock %}
