--- a/templates/aggregator/edit.html
+++ b/templates/aggregator/edit.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block head_title %}List of RSS sources{% endblock %}
+{% block style %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap-switch.css' %}">
+{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
@@ -73,4 +76,6 @@
 {% endblock %}
 {% block js %}
     <script src="{% static 'js/popover.js' %}"></script>
+    <script src="{% static 'js/bootstrap-switch.js' %}"></script>
+    <script src="{% static 'js/init-bw.js' %}"></script>
 {% endblock %}
