--- a/templates/aggregator/edit.html
+++ b/templates/aggregator/edit.html
@@ -21,7 +21,9 @@
                     {% csrf_token %}
                     <div class="panel panel-primary">
                         <div class="panel-heading text-align-center">
-                            Edit your rss sources here
+                            <div class="panel-title">
+                                Edit your rss sources here
+                            </div>
                         </div>
                         <table class="table table-responsive table-bordered table-hover">
                             <thead>
