--- a/templates/filters/add.html
+++ b/templates/filters/add.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block head_title %}Add a filter{% endblock %}
 {% block style %}
     <link rel="stylesheet"
@@ -6,39 +7,21 @@
 {% endblock %}
 {% block content %}
     <div class="row">
-        <h1 class="lead text-align-center">Add a new filter</h1>
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <div class="panel-title text-align-center">
-                    Here you can create a new filter for search rss feeds.
+        <div class="col-md-8 col-md-offset-2">
+            <h1 class="lead text-align-center">Create a new filter</h1>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <div class="panel-title">
+                        Here you can create your own filter for wished rss sources
+                    </div>
                 </div>
-            </div>
-            <div class="panel-body">
-                <form action="" method="post">
-                    {% csrf_token %}
-                    <div class="col-md-3">
-                        <label for="id_items">If</label>
-                        <select name="items" id="id_items" class="selectpicker">
-                            <option value="1">Title</option>
-                            <option value="1">Description</option>
-                        </select>
-                    </div>
-                    <div class="col-md-3">
-                        <label for="id_items">is</label>
-                        <select name="actions" id="id_actions" class="selectpicker">
-                            <option value="1">Contains</option>
-                            <option value="1">Doesn't contain</option>
-                        </select>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="a word">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <button class="btn btn-primary btn-block">Create</button>
-                    </div>
-                </form>
+                <div class="panel-body">
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button class="btn btn-primary btn-block" type="submit">Okay</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
