--- a/templates/filters/home.html
+++ b/templates/filters/home.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %}
 {% block head_title %}Filters{% endblock %}
 {% block content %}
-
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            {% for message in messages %}
+                {% if messages.success %}
+                    <div class="alert alert-success alert-dismissible" role="alert">
+                {% else %}
+                    <div class="alert alert-success alert-dismissible" role="alert">
+                {% endif %}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                    aria-hidden="true">&times;</span></button>
+            {{ message }}
+            </div>
+            {% endfor %}
+            </div>
+        </div>
 {% endblock %}
